'bug fix in safari, flexbox too large'

--- a/assets/style.css
+++ b/assets/style.css
@@ -278,6 +278,10 @@ p {
   display: none;
 }
 
+.media img {
+  max-height: 245px;
+}
+
 @media (min-width: 576px) {
   .modal-dialog {
     max-width: 100%;
